--- a/CRUD-FK/build.gradle
+++ b/CRUD-FK/build.gradle
@@ -16,15 +16,20 @@ version = '1.0-SNAPSHOT'
 
 
 dependencies {
-    testImplementation platform('org.junit:junit-bom:5.9.1')
-    testImplementation 'org.junit.jupiter:junit-jupiter'
-    implementation 'io.dropwizard:dropwizard-core:2.0.25'
-//    implementation 'io.dropwizard:dropwizard-hibernate:2.0.0'
-//    implementation 'org.hibernate:hibernate-core:5.4.32.Final'
-    implementation 'com.google.inject:guice:5.0.1'
-    compileOnly 'org.projectlombok:lombok:1.18.20'
-    annotationProcessor 'org.projectlombok:lombok:1.18.20'
-//    compile group: 'org.springframework.boot', name: 'spring-boot-starter-data-jpa', version: '2.1.3.RELEASE'
+    implementation 'io.dropwizard:dropwizard-core:2.0.0'
+    implementation 'io.dropwizard:dropwizard-jackson:2.0.0'
+    implementation 'org.projectlombok:lombok:1.18.22'
+    implementation 'org.junit.jupiter:junit-jupiter-api:5.9.0'
+    annotationProcessor 'org.projectlombok:lombok:1.18.24'
+    testImplementation 'io.dropwizard:dropwizard-testing:2.0.0'
+    implementation 'io.dropwizard:dropwizard-hibernate:2.0.10'
+    implementation 'com.mysql:mysql-connector-j:8.0.31'
+    testImplementation 'io.dropwizard:dropwizard-testing:2.0.0'
+    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
+    testImplementation 'org.mockito:mockito-junit-jupiter:4.6.1'
+    testImplementation 'org.mockito:mockito-core:4.6.1'
+    testImplementation 'org.assertj:assertj-core:3.23.1'
+    implementation 'com.google.inject:guice:4.1.0'
 }
 
 test {
